--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,16 +1,13 @@
-<h1>Register</h1>
-    <%= form_with model: @user, url: sign_up_path do |form| %>
-    <% if form.object.user.errors.any?%>
+<h1>Update Password</h1>
+    <%= form_with model: Current.user, url: update_password_path do |form| %>
+    <% if form.object.errors.any?%>
         <div class="alert alert-danger">
             <% form.object.errors.full_messages.each do |messages|%>
             <div><%= messages%></div>
             <% end %>
-            </div>
+        </div>
     <%end%>
-    <%= form.label :email%>
-    <div class="mb-3">
-        <%= form.text_field :email ,class:"form-control", placeholder: "steve@apple.com"%>
-    </div>   
+
     <%= form.label :password%>
     <div class="mb-3">
         <%= form.password_field :password ,class:"form-control", placeholder: "Password" %>
@@ -21,6 +18,6 @@
     </div>   
 
     <div class = "mb-3">
-    <%= form.submit "Get started" , class: "btn btn-primary"%>
+    <%= form.submit "Update Password" , class: "btn btn-primary"%>
     </div>
 <%end%>
