--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,23 @@
           <%= link_to "About", about_us_path , class: "nav-link"%>
         </li>
       </ul>
+
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if Current.user %>
+          <li class="nav-item">     
+            <%= link_to Current.user.email, update_password_path, class: "nav-link"%> 
+          </li>
+          <li class="nav-item">     
+            <%= button_to "Logout", logout_path ,method: :delete, class:"btn btn-outline-secondary" %>
+          </li>
+          <%else%>
+          <li class="nav-item">     
+            <%= link_to "Sign In", log_in_path , class:"btn btn-outline-secondary"%>
+          </li>
+          <li class="nav-item">     
+            <%= link_to "Register", sign_up_path, class:"btn btn-outline-secondary"%>
+          </li>
+        <% end%>
     </div>
   </div>
 </nav>
