Reset Password feature and some small changes at new.html.erb under registration

--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Update Password</h1>
-    <%= form_with model: Current.user, url: update_password_path do |form| %>
+    <%= form_with model: Current.user, url: password_path do |form| %>
     <% if form.object.errors.any?%>
         <div class="alert alert-danger">
             <% form.object.errors.full_messages.each do |messages|%>
