--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Register</h1>
     <%= form_with model: @user, url: sign_up_path do |form| %>
-    <% if form.object.user.errors.any?%>
+    <% if form.object.errors.any?%>
         <div class="alert alert-danger">
             <% form.object.errors.full_messages.each do |messages|%>
             <div><%= messages%></div>
@@ -9,7 +9,8 @@
     <%end%>
     <%= form.label :email%>
     <div class="mb-3">
-        <%= form.text_field :email ,class:"form-control", placeholder: "steve@apple.com"%>
+        <%= form.text_field :email ,class:"form-control", placeholder: "steve@apple.com"%> 
+        <%# ':email' is written so that the has data is {email: 'Whatever output by user'} when passed to controller %>
     </div>   
     <%= form.label :password%>
     <div class="mb-3">
@@ -20,7 +21,7 @@
         <%= form.password_field :password_confirmation ,class:"form-control",placeholder:"Confirmed Password"%>
     </div>   
 
-    <div class = "mb-3">
+    <div class = "mb-3">    
     <%= form.submit "Get started" , class: "btn btn-primary"%>
     </div>
 <%end%>
