--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -7,9 +7,11 @@
     <%= form.label :password%>
     <div class="mb-3">
         <%= form.password_field :password ,class:"form-control", placeholder: "Password" %>
+        <%= link_to "Forget Password", password_reset_path%>
     </div>   
 
     <div class = "mb-3">
     <%= form.submit "Sign In" , class: "btn btn-primary"%>
     </div>
+
 <% end %>
